update balancedBrackets: use LinkedList for Stack and fix bug